[gd_scene load_steps=22 format=3 uid="uid://c1ebx3hdak1hs"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_jtrst"]
[ext_resource type="Texture2D" uid="uid://ctyw4sp2d0b0r" path="res://Sprites/robot_head_mouth_closed.png" id="2_uji0j"]
[ext_resource type="Texture2D" uid="uid://c6jf55i33qb0m" path="res://Sprites/pupil.png" id="3_1y4si"]
[ext_resource type="PackedScene" uid="uid://ct5vrvfvxdknu" path="res://Scenes/Components/mover.tscn" id="3_7r6qc"]
[ext_resource type="Texture2D" uid="uid://db5annu71ih42" path="res://Sprites/spring_coiled1.png" id="5_1m80r"]
[ext_resource type="Texture2D" uid="uid://4mqavbk5k8gy" path="res://Sprites/spring_uncoil1.png" id="5_tdsyu"]
[ext_resource type="Texture2D" uid="uid://bgdq58kr63kuf" path="res://Sprites/spring_uncoiled2.png" id="6_qlfni"]
[ext_resource type="PackedScene" uid="uid://2g6eudh8524k" path="res://Scenes/Components/jump_handler.tscn" id="7_a76qr"]
[ext_resource type="PackedScene" uid="uid://1nsyv04ph5ji" path="res://Scenes/Components/health.tscn" id="8_xvlnc"]
[ext_resource type="PackedScene" uid="uid://pgy4ksdnif2c" path="res://Scenes/ArmStuff/gun_arm.tscn" id="9_5cddh"]
[ext_resource type="AudioStream" uid="uid://dwp7qcpk3ian3" path="res://Audio/PlayerSounds/Player_Jump_Sound.ogg" id="10_0w31d"]
[ext_resource type="PackedScene" uid="uid://ckbt1h3uask23" path="res://Scenes/ArmStuff/jet_arm.tscn" id="11_1pjay"]
[ext_resource type="AudioStream" uid="uid://dtlndattmwofw" path="res://Audio/PlayerSounds/Player_Landing_Sound.ogg" id="11_pg0vc"]
[ext_resource type="AudioStream" uid="uid://n8kxogfh0nus" path="res://Audio/PlayerSounds/Death_Sound.ogg" id="12_4s26u"]
[ext_resource type="AudioStream" uid="uid://d1jub3xmptj20" path="res://Audio/PlayerSounds/Damage_Sound_2.ogg" id="13_gbmcd"]
[ext_resource type="AudioStream" uid="uid://cdqnyiuauroh2" path="res://Audio/PlayerSounds/Dandy_Rolling_Sound.ogg" id="14_rv8u2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yeoou"]
radius = 243.19

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_g8w1e"]
friction = 400.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vthxm"]
radius = 30.28

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_acg7p"]
friction = 400.0

[sub_resource type="SpriteFrames" id="SpriteFrames_muur5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1m80r")
}],
"loop": true,
"name": &"coiled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1m80r")
}, {
"duration": 1.0,
"texture": ExtResource("5_tdsyu")
}, {
"duration": 1.0,
"texture": ExtResource("6_qlfni")
}, {
"duration": 1.0,
"texture": ExtResource("6_qlfni")
}, {
"duration": 1.0,
"texture": ExtResource("5_tdsyu")
}, {
"duration": 1.0,
"texture": ExtResource("5_tdsyu")
}, {
"duration": 1.0,
"texture": ExtResource("5_1m80r")
}],
"loop": false,
"name": &"uncoil",
"speed": 20.0
}]

[node name="Player" type="RigidBody2D"]
collision_layer = 8
collision_mask = 8
gravity_scale = 7.0
script = ExtResource("1_jtrst")
death_y_zone = 5000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yeoou")

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("2_uji0j")

[node name="GooglyEyes" type="Node" parent="Head"]

[node name="LeftPupil" type="RigidBody2D" parent="Head/GooglyEyes"]
position = Vector2(-112.615, -71.715)
collision_layer = 128
collision_mask = 128
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_g8w1e")
gravity_scale = 0.0
linear_damp = 18.172
angular_damp = 16.131

[node name="Sprite2D" type="Sprite2D" parent="Head/GooglyEyes/LeftPupil"]
position = Vector2(109.17, -42)
texture = ExtResource("3_1y4si")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/GooglyEyes/LeftPupil"]
visible = false
shape = SubResource("CircleShape2D_vthxm")

[node name="RightPupil" type="RigidBody2D" parent="Head/GooglyEyes"]
position = Vector2(105.685, -69.145)
collision_layer = 128
collision_mask = 128
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_acg7p")
gravity_scale = 0.0
linear_damp = 16.131
angular_damp = 12.991

[node name="Sprite2D" type="Sprite2D" parent="Head/GooglyEyes/RightPupil"]
position = Vector2(109.17, -42)
texture = ExtResource("3_1y4si")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/GooglyEyes/RightPupil"]
shape = SubResource("CircleShape2D_vthxm")

[node name="LeftSocket" type="PinJoint2D" parent="Head/GooglyEyes"]
position = Vector2(-109.415, 0)
node_a = NodePath("../../..")
node_b = NodePath("../LeftPupil")
bias = 0.9

[node name="RightSocket" type="PinJoint2D" parent="Head/GooglyEyes"]
position = Vector2(102.07, 0)
node_a = NodePath("../../..")
node_b = NodePath("../RightPupil")
bias = 0.9

[node name="Mover" parent="." instance=ExtResource("3_7r6qc")]

[node name="PlayerRoll" type="AudioStreamPlayer2D" parent="Mover"]
stream = ExtResource("14_rv8u2")
volume_db = -20.0

[node name="Spring" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(0, 200)
sprite_frames = SubResource("SpriteFrames_muur5")
animation = &"uncoil"

[node name="JumpHandler" parent="." instance=ExtResource("7_a76qr")]
collision_mask = 8

[node name="JumpSound" type="AudioStreamPlayer" parent="JumpHandler"]
stream = ExtResource("10_0w31d")
volume_db = -15.0

[node name="LandingSound" type="AudioStreamPlayer" parent="JumpHandler"]
stream = ExtResource("11_pg0vc")
volume_db = -15.0

[node name="Health" parent="." instance=ExtResource("8_xvlnc")]

[node name="GunArm" parent="." node_paths=PackedStringArray("body_to_attach") instance=ExtResource("9_5cddh")]
z_index = -4
position = Vector2(0, 18.595)
body_to_attach = NodePath("..")

[node name="JetArm" parent="." instance=ExtResource("11_1pjay")]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_4s26u")

[node name="DamagedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_gbmcd")
volume_db = -6.559

[connection signal="animation_finished" from="Spring" to="." method="_on_spring_animation_finished"]
[connection signal="dead" from="Health" to="." method="_on_health_dead"]
[connection signal="healing" from="Health" to="." method="_on_health_healing"]
[connection signal="hurt" from="Health" to="." method="_on_health_hurt"]
[connection signal="max_health_increase" from="Health" to="." method="_on_health_max_health_increase"]
